
[metadata]
name = pptx-template
version = attr: pptx_template.__version__
description = 'The PowerPoint presentation builder using template.pptx and data(json and csv)',
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/m3dev/pptx-template
author = Reki Murakami
author_email = reki2000@gmail.com
license = Apache-2.0
classifiers =
  Development Status :: 3 - Alpha
  Topic :: Utilities
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent

keywords =
  powerpoint
  ppt
  pptx

[options]
test_suite = test
packages =
  pptx_template
install_requires =
  python-pptx==0.6.6
  pandas >=0.22,<=0.24.0
  openpyxl>=2.4.7

[entry_points]
console_scripts =
  pptx_template = pptx_template.cli:main

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1
